wordpress/30-wordpress.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wp-app
    tier: frontend
    env: prod
    customer: tuke
  name: wp-app
  # namespace: wordpress
spec:
  replicas: 4
  selector:
    matchLabels:
      app: wp-app
  template:
    metadata:
      labels:
        app: wp-app
        tier: frontend
        env: prod
        customer: tuke
    spec:
      containers:
      - image: wordpress
        name: wordpress
        volumeMounts:
        - mountPath: /var/www/html
          name: www

      volumes:
      - name: www
        persistentVolumeClaim:
          claimName: www-claim

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: wp-app
    tier: frontend
    env: prod
    customer: tuke
  name: wp-app
  # namespace: wordpress
spec:
  ports:
  - name: www
    port: 8000
    protocol: TCP
    targetPort: 80
  selector:
    app: wp-app
  type: LoadBalancer
