wordpress/adminer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: adminer
    tier: frontend
    env: dev
  name: adminer
  namespace: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
      - image: adminer
        name: adminer

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: adminer
    tier: frontend
    env: dev
  name: adminer
  namespace: wordpress
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: adminer
  type: NodePort
