wordpress/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mariadb
    tier: backend
    env: prod
    customer: tuke
    kind: deployment
  name: wp-db
  namespace: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
        tier: backend
        env: prod
        customer: tuke
    spec:
      containers:
      - image: mariadb
        name: mariadb
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: mariadb
    tier: backend
    env: prod
    customer: tuke
  name: wp-db
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mariadb
