wordpress/manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wp-db
    tier: backend
    env: prod
    customer: tuke
  name: wp-db
  namespace: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wp-db
  template:
    metadata:
      labels:
        app: wp-db
    spec:
      containers:
        - image: mariadb
          name: mariadb
          resources:
            requests:
              memory: 100Mi
              cpu: 100m
            limits:
              memory: 500Mi
              cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wp-db
    tier: backend
    env: prod
    customer: tuke
  name: wp-db
  namespace: wordpress
spec:
  ports:
    - name: db
      port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: wp-db
    # type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wp-app
    tier: frontend
    env: prod
    customer: tuke
  name: wp-app
  namespace: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wp-app
  template:
    metadata:
      labels:
        app: wp-app
    spec:
      containers:
        - image: wordpress
          name: wp-app
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wp-app
    tier: frontend
    env: prod
    customer: tuke
  name: wp-app
  namespace: wordpress
spec:
  ports:
    - name: www
      port: 8000
      protocol: TCP
      targetPort: 80
  selector:
    app: wp-app
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wp-adminer
    tier: frontend
    env: dev
  name: wp-adminer
  namespace: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wp-adminer
  template:
    metadata:
      labels:
        app: wp-adminer
    spec:
      containers:
        - image: adminer
          name: adminer
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wp-adminer
    tier: frontend
    env: dev
  name: wp-adminer
  namespace: wordpress
spec:
  ports:
    - name: www
      port: 8080
      protocol: TCP
      targetPort: 8080
      nodePort: 31500
  selector:
    app: wp-adminer
  type: NodePort
