wordpress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  namespace: wordpress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wp-app
            port:
              number: 80

      - path: /adminer
        pathType: Prefix
        backend:
          service:
            name: wp-adminer
            port:
              number: 8080
